# Autonomous-FinOps-Multi-Agent-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: shared_types.py
agents/specialist/: aws_agent.py  azure_agent.py  gcp_agent.py
agents/supervisor/: supervisor.py
agents/tools/: cost_tools.py
bot/: slack_bot.py
cloudsense/: __init__.py
cloudsense/agents/: __init__.py  shared_types.py
cloudsense/agents/specialist/: __init__.py  action_agent.py  anomaly_agent.py  aws_agent.py  azure_agent.py  forecasting_agent.py  gcp_agent.py  tagging_agent.py
cloudsense/agents/supervisor/: __init__.py  supervisor.py
cloudsense/agents/tools/: __init__.py  cost_tools.py
cloudsense/audit/: exporter.py
cloudsense/auth/: __init__.py  deps.py  models.py  repository.py  service.py
cloudsense/bot/: __init__.py  slack_bot.py
cloudsense/connectors/: __init__.py  base.py
cloudsense/connectors/aws/: __init__.py  cost_connector.py
cloudsense/connectors/azure/: __init__.py  cost_connector.py
cloudsense/connectors/gcp/: __init__.py  cost_connector.py
cloudsense/core/: config.py
cloudsense/core/models/: billing.py  enums.py  focus.py
cloudsense/exporters/: __init__.py  bi_adapters.py  focus_export.py
cloudsense/integrations/: __init__.py
cloudsense/integrations/datadog/: __init__.py  integration.py
cloudsense/integrations/datadog/dashboards/: costs.json
cloudsense/integrations/grafana/: __init__.py  plugin_backend.py
cloudsense/k8s/: __init__.py  cost_service.py
cloudsense/observability/: __init__.py  tracing.py
cloudsense/policy/: __init__.py  engine.py
cloudsense/policy/rego/: cloudsense.rego
cloudsense/sdk/: __init__.py  focus_schema.py  marketplace.py  plugin_sdk.py
cloudsense/services/: __init__.py
cloudsense/services/actions/: executor.py  rollback.py
cloudsense/services/alerting/: __init__.py  budget_alerts.py  opsgenie.py  pagerduty.py
cloudsense/services/api/: config.py  deps.py  main.py
cloudsense/services/api/routers/: actions.py  agents.py  anomalies.py  audit.py  auth.py  budgets.py  connectors.py  costs.py  exports.py  forecasting.py  ingestion.py  k8s.py  tags.py
cloudsense/services/db/: clickhouse.py  postgres.py
cloudsense/services/ml/: __init__.py  anomaly_detection.py  forecasting.py  model_registry.py
connectors/aws/: cost_connector.py
connectors/azure/: cost_connector.py
connectors/gcp/: cost_connector.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/mart/: mart_daily_cost_by_service.sql
dbt/models/staging/: sources.yml  stg_focus_billing.sql
docker/api/: Dockerfile
docker/clickhouse/init/: 001_create_tables.sql
docs/: architecture.md
grafana-plugin/: package.json
grafana-plugin/src/: ConfigEditor.tsx  QueryEditor.tsx  datasource.ts  module.ts  plugin.json  types.ts
infra/: __init__.py
infra/clickhouse/: 001_focus_billing.sql  __init__.py  schema.sql
infra/docker/: docker-compose.yml
infra/helm/cloudsense/: Chart.yaml  values.yaml
infra/helm/cloudsense/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  secrets.yaml  service.yaml
infra/kafka/: __init__.py  consumer.py  docker-compose.kafka.yml  kraft.properties  producer.py
infra/postgres/: init.sql
infra/terraform/: action_roles.tf  aws_iam.tf  gcp_iam.tf
observability/: tracing.py
recommendations/: engine.py
sdk/: focus_schema.py
services/api/: Dockerfile  config.py  main.py
services/api/db/: clickhouse.py
services/api/db/migrations/: env.py
services/api/routers/: agents.py  connectors.py  costs.py  health.py  ingestion.py
services/cli/: main.py
services/ingestion/: Dockerfile  tasks.py
tests/: __init__.py  conftest.py
tests/core/: test_billing_models.py  test_config.py  test_focus_models.py
tests/e2e/: test_phase4_e2e.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: __init__.py  test_agents.py  test_connectors.py  test_focus_schema.py  test_forecasting.py  test_phase4_action_tagging.py  test_phase51_rbac_sso_k8s.py  test_phase52_exports_grafana_datadog.py  test_phase53_sdk_audit.py  test_policy_engine.py
