[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cloudsense"
version = "0.1.0"
description = "Autonomous FinOps multi-agent platform for AWS, Azure & GCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["finops", "cloud-cost", "multi-agent", "aws", "azure", "gcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["cloudsense"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
