[tool.poetry]
name = "cloudsense"
version = "0.1.0"
description = "FinOps multi-agent platform — AWS · Azure · GCP"
authors = ["CloudSense Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cloudsense" }]

[tool.poetry.dependencies]
python = "^3.12"

# API
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# Auth
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.9"

# Cloud SDKs
boto3 = "^1.34.0"
azure-identity = "^1.16.0"
azure-mgmt-costmanagement = "^4.0.0"
azure-mgmt-advisor = "^9.0.0"
azure-mgmt-resource = "^23.0.0"
google-cloud-billing = "^1.13.0"
google-cloud-recommender = "^2.14.0"
google-cloud-bigquery = "^3.23.0"

# Data / DB
clickhouse-driver = "^0.2.9"
clickhouse-connect = "^0.7.16"
asyncpg = "^0.29.0"
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
alembic = "^1.13.1"
redis = { version = "^5.0.6", extras = ["hiredis"] }

# Kafka (KRaft — no ZooKeeper)
confluent-kafka = "^2.4.0"

# ETL / Data
pandas = "^2.2.2"
pyarrow = "^16.1.0"
dbt-clickhouse = "^1.8.0"

# Observability
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
structlog = "^24.2.0"

# Utils
httpx = "^0.27.0"
tenacity = "^8.4.1"
python-dotenv = "^1.0.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
moto = { version = "^5.0.10", extras = ["all"] }
ruff = "^0.5.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
httpx = "^0.27.0"   # for TestClient

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
