[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsense"
version = "0.3.0"
description = "CloudSense — FinOps Multi-Agent Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "CloudSense Team", email = "team@cloudsense.io"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "langgraph>=0.1,<1.0",
    "langchain>=0.2,<1.0",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "langsmith>=0.1",
    "boto3>=1.34",
    "azure-mgmt-costmanagement>=4.0",
    "google-cloud-billing>=1.13",
    "clickhouse-driver>=0.2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "kafka-python>=2.0",
    "redis>=5.0",
    "celery>=5.4",
    "prophet>=1.1",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "mlflow>=2.13",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "structlog>=24.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "localstack-client>=2.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudsense*"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=cloudsense --cov-report=term-missing --cov-report=html"
